--- a/users/erosenberg/configs/241031/config_hp_satp1_debug.yaml
+++ b/users/erosenberg/configs/241031/config_hp_satp1_debug.yaml
@@ -1,10 +1,10 @@
-context: '/global/cfs/cdirs/sobs/users/rosenber/contexts/use_this_local_satp1_241031.yaml'
+context: '/scratch/gpfs/SIMONSOBS/users/erosenberg/contexts/use_this_local_satp1.yaml'
 site: so_sat1
 nside: 512
 query: 'obslist_satp1_debug.txt'
-odir: '/global/cfs/cdirs/sobs/users/rosenber/maps/satp1_debug/atomics'
-atomic_db: '/global/cfs/cdirs/sobs/users/rosenber/maps/satp1_debug/atomic_maps_satp1_debug.db'
+odir: 'debug/atomics'
+atomic_db: 'atomics.db'
 preprocess_config: 'minimal_preprocess.yaml'
 dtype_map: 'float32'
 freq: "f150"
-# wafer: "ws0"
+wafer: "ws0"
