--- a/users/erosenberg/bundling_config.yaml
+++ b/users/erosenberg/bundling_config.yaml
@@ -1,5 +1,5 @@
 ## Required arguments ##
-bundle_db: 'test_out/bundles_{patch}_seed{seed}_20250201.db' # Optional format fields {patch} and {seed}
+bundle_db: 'test_out/bundles_{patch}_seed{seed}_20250224.db' # Optional format fields {patch} and {seed}
 atomic_db: '/scratch/gpfs/SIMONSOBS/sat-iso/mapmaking/satp1_20250108/atomic_db.sqlite'
 n_bundles: 4
 seed: 17  # Only needed for make_bundle_db unless included in format for bundle_db
@@ -7,7 +7,7 @@ seed: 17  # Only needed for make_bundle_db unless included in format for bundle_
 ## Optional shared arguments ##
 query_restrict: "pwv < 2 AND median_weight_qu < 2e10 AND ((f_hwp > 1.9 AND f_hwp < 2.3) OR (f_hwp > -2.3 AND f_hwp < -1.9))"
 only_make_db: False
-patch: "north"  # Only needed for make_bundle_db unless included in format for bundle_db or map_string_format
+patch: ["south", "north"]  # Only needed for make_bundle_db unless included in format for bundle_db or map_string_format
 
 ## Optional for make_bundle_db ##
 inter_obs_props:
@@ -17,13 +17,13 @@ inter_obs_props:
   ambient_temperature: "median"
   azimuth:
     splits: [[0, 180], [180, 360]]
-    names: ["rising", "setting"]
+    names: ["rising_azimuth", "setting_azimuth"]
   roll_angle:
     splits: [[-47, -44], [-3, 3], [44, 47]]
-    names: ["roll_-45", "roll_0", "roll_+45"]
+    names: ["-45_roll_angle", "0_roll_angle", "+45_roll_angle"]
   f_hwp:
     splits: [[-2.3, -1.9], [1.9, 2.3]]
-    names: ["hwp_neg", "hwp_pos"]
+    names: ["neg_f_hwp", "pos_f_hwp"]
 
 overwrite: True
 
@@ -36,15 +36,15 @@ freq_channel: ["f090", "f150"] # May be a single string or a list
 map_string_format: "{patch}/satp1_{freq_channel}_{wafer}_{split}_bundle{bundle_id}_map.fits"
 
 ## Optional for bundle_maps ##
-# intra_obs_splits:
-#   - "det_left"
-#   - "det_right"
-#   - "det_upper"
-#   - "det_lower"
-#   - "det_in"
-#   - "det_out"
-#   - "scan_left"
-#   - "scan_right"
+intra_obs_splits:
+  - "det_left"
+  - "det_right"
+  - "det_upper"
+  - "det_lower"
+  - "det_in"
+  - "det_out"
+  - "scan_left"
+  - "scan_right"
 
 intra_obs_pair:
   - "det_left"
@@ -52,26 +52,26 @@ intra_obs_pair:
 
 inter_obs_splits:
   - "low_pwv"
-#   - "high_pwv"
-#   - "low_dpwv"
-#   - "high_dpwv"
-#   - "low_sun_distance"
-#   - "high_sun_distance"
-#   - "low_ambient_temperature"
-#   - "high_ambient_temperature"
-#   - "rising"
-#   - "setting"
-#   - "roll_-45"
-#   - "roll_0"
-#   - "roll_+45"
-#   - "hwp_neg"
-#   - "hwp_pos"
+  - "high_pwv"
+  - "low_dpwv"
+  - "high_dpwv"
+  - "low_sun_distance"
+  - "high_sun_distance"
+  - "low_ambient_temperature"
+  - "high_ambient_temperature"
+  - "rising_azimuth"
+  - "setting_azimuth"
+  - "-45_roll_angle"
+  - "0_roll_angle"
+  - "+45_roll_angle"
+  - "neg_f_hwp"
+  - "pos_f_hwp"
 
 car_map_template: "mapmaking/full_car_fejer1_5arcmin.fits"
 
 wafer: null  # null, string, or list of strings
-save_fnames: False
-nproc: 1
+save_fnames: True
+nproc: 56
 
 atomic_list: null
 abscal: False
