--- a/pipeline/simpure/satp1/filtering_config_satp1.yaml
+++ b/pipeline/simpure/satp1/filtering_config_satp1.yaml
@@ -2,16 +2,15 @@
 pwg_scripts_dir: &pwg_scripts_dir /home/kw6905/bbdev/pwg-scripts
 bb_awg_scripts_dir: &bb_awg_scripts_dir /home/kw6905/bbdev/bb-awg-scripts
 
-bundle_db: /scratch/gpfs/SIMONSOBS/sat-iso/mapmaking/satp1_20250108/bundles/bundles_south_seed17_20250312.db
-atomic_db: /scratch/gpfs/SIMONSOBS/sat-iso/mapmaking/satp1_20250108/atomic_db.sqlite
+bundle_db: /scratch/gpfs/SIMONSOBS/users/kw6905/simpure/sky_patch/satp1_iso/bundles_south_seed17_20250324.db
+atomic_db: /scratch/gpfs/SIMONSOBS/users/kw6905/simpure/sky_patch/satp1_iso/atomic_db_ws0.sqlite
 freq_channel: &freq_channel f090
-output_dir: &output_dir /scratch/gpfs/SIMONSOBS/sat-iso/transfer_function/satp1/f090
+output_dir: &output_dir /scratch/gpfs/SIMONSOBS/users/kw6905/simpure/transfer_function/coof_n0p5/f090
 sim_string_format: "{pure_type}_1.0arcmin_fwhm30.0_sim{sim_id:04d}_CAR.fits"
-sim_ids: [6]
+sim_ids: [0, 1, 2, 3, 4]
 
 # (Optional for coadd_filtered_sims)
-intra_obs_splits: [scan_left, scan_right, det_left, det_right, det_in,
-                   det_out, det_lower, det_upper]
+intra_obs_splits: [scan_left, scan_right]
 
 
 ## Optional shared arguments ##
@@ -22,14 +21,14 @@ query_restrict: "median_weight_qu < 2e10"
 
 
 ## Required arguments for filter_sims_sotodlib ##
-preprocess_config_init: !path [*pwg_scripts_dir, iso-sat-review/transfer_function/satp1/transfer_preproc_config_satp1_20250108_sat_iso_init.yaml]
-preprocess_config_proc: !path [*pwg_scripts_dir, iso-sat-review/transfer_function/satp1/transfer_preproc_config_satp1_20250108_sat_iso_proc.yaml]
+preprocess_config_init: /home/kw6905/bbdev/bb-awg-scripts/pipeline/simpure/satp1/transfer_preproc_config_satp1_20250108_simpure_init.yaml
+preprocess_config_proc: /home/kw6905/bbdev/bb-awg-scripts/pipeline/simpure/satp1/transfer_preproc_config_satp1_20250108_simpure_proc.yaml
 sim_dir: /scratch/gpfs/SIMONSOBS/sat-iso/transfer_function/input_sims
 
 
 ## Optional arguments for filter_sims_sotodlib ##
 # nside: 512
-fp_thin: 8
+fp_thin: 32
 
 
 ## Required arguments for coadd_filtered_sims ##
@@ -38,9 +37,5 @@ atomic_sim_dir: !path [*output_dir, atomic_sims, "{sim_id:04d}"]
 
 ## Optional arguments for coadd_filtered_sims ##
 intra_obs_pair: [scan_left, scan_right]
-inter_obs_splits: [low_pwv, high_pwv, low_dpwv, high_dpwv, high_sun_distance,
-                   low_sun_distance, high_ambient_temperature,
-                   low_ambient_temperature, rising_azimuth, setting_azimuth,
-                   0_roll_angle, -45_roll_angle, +45_roll_angle,
-                   pos_f_hwp, neg_f_hwp, low_moon_distance, high_moon_distance]
+inter_obs_splits: []
 nbatch_atomics: 1
