Simpure additions: 1) introduce simplified filtering and coadding scripts for testing    purposes 2) better parallelization and logging 3) add README.txt

--- a/pipeline/simpure/satp3/butter4/filtering_config_tf_sims_butter4.yaml
+++ b/pipeline/simpure/satp3/butter4/filtering_config_tf_sims_butter4.yaml
@@ -9,7 +9,8 @@ output_dir: &output_dir /cephfs/soukdata/user_data/kwolz/simpure/filtered_pure_s
 
 sim_dir: /cephfs/soukdata/user_data/kwolz/simpure/input_sims
 sim_string_format: "{pure_type}_20.0arcmin_fwhm30.0_sim{sim_id:04d}_CAR.fits"
-sim_ids: 0,199  # [0,1,2,3,4]
+pure_types: E
+sim_ids: 700,999  # [0,1,2,3,4]
 
 # (Optional for coadd_filtered_sims)
 intra_obs_splits: [scan_left, scan_right]
