--- a/users/erosenberg/bundling_config.yaml
+++ b/users/erosenberg/bundling_config.yaml
@@ -1,13 +1,14 @@
 ## Required arguments ##
-bundle_db: 'test_out/bundles_{patch}_seed{seed}_20250224.db' # Optional format fields {patch} and {seed}
-atomic_db: '/scratch/gpfs/SIMONSOBS/sat-iso/mapmaking/satp1_20250108/atomic_db.sqlite'
+bundle_db: 'bundles_{patch}_obs100_seed{seed}_v2.db' # Optional format fields {patch} and {seed}
+atomic_db: 'atomic_db.sqlite'
+
 n_bundles: 4
-seed: 17  # Only needed for make_bundle_db unless included in format for bundle_db
+seed: 10  # Only needed for make_bundle_db unless included in format for bundle_db
 
 ## Optional shared arguments ##
 query_restrict: "pwv < 2 AND median_weight_qu < 2e10 AND ((f_hwp > 1.9 AND f_hwp < 2.3) OR (f_hwp > -2.3 AND f_hwp < -1.9))"
 only_make_db: False
-patch: ["south", "north"]  # Only needed for make_bundle_db unless included in format for bundle_db or map_string_format
+patch: ["south"]  # Only needed for make_bundle_db unless included in format for bundle_db or map_string_format
 
 ## Optional for make_bundle_db ##
 inter_obs_props:
@@ -31,62 +32,35 @@ inter_obs_props:
     splits: [[0.25, 0.33], [0.54, 0.76], [0.76, 1.04], [1.48, 1.53]]
     names: ["0.25_scan_acc", "0.57_scan_acc", "0.9_scan_acc", "1.5_scan_acc"]
   ctime: "median"
+  moon_distance: "median"
 
 overwrite: False
 
 ## Required for bundle_maps ##
 pix_type: 'car'
-map_dir: "/scratch/gpfs/SIMONSOBS/sat-iso/mapmaking/satp1_20250108/atomic_maps"
-output_dir: "test_out/"
-freq_channel: ["f090", "f150"] # May be a single string or a list
+map_dir: "/cephfs/soukdata/sat_analysis/iso_data/v1/mapmaking/satp1_20250108/atomic_maps/"
+output_dir: "out/v2/"
+freq_channel: ["f150"] # May be a single string or a list
 # Format fields {split}, {bundle_id}, {freq_channel} required. {patch}, {wafer} optional.
-map_string_format: "{patch}/satp1_{freq_channel}_{wafer}_{split}_bundle{bundle_id}_map.fits"
+map_string_format: "{patch}/satp1_{freq_channel}_{wafer}_{split}_bundle{bundle_id}_{map_type}.fits"
 
 ## Optional for bundle_maps ##
 intra_obs_splits:
-  - "det_left"
-  - "det_right"
-  - "det_upper"
-  - "det_lower"
-  - "det_in"
-  - "det_out"
   - "scan_left"
   - "scan_right"
 
 intra_obs_pair:
-  - "det_left"
-  - "det_right"
+  - "scan_left"
+  - "scan_right"
 
 inter_obs_splits:
   - "low_pwv"
   - "high_pwv"
-  - "low_dpwv"
-  - "high_dpwv"
-  - "low_sun_distance"
-  - "high_sun_distance"
-  - "low_ambient_temperature"
-  - "high_ambient_temperature"
-  - "rising_azimuth"
-  - "setting_azimuth"
-  - "-45_roll_angle"
-  - "0_roll_angle"
-  - "+45_roll_angle"
-  - "neg_f_hwp"
-  - "pos_f_hwp"
-  - ["0.5_scan_speed", "0.25_scan_acc"]
-  - ["0.5_scan_speed", "0.57_scan_acc"]
-  - ["0.8_scan_speed", "0.25_scan_acc"]
-  - ["0.8_scan_speed", "0.9_scan_acc"]
-  - ["1.0_scan_speed", "0.9_scan_acc"]
-  - ["1.5_scan_speed", "1.5_scan_acc"]
-  - "low_ctime"
-  - "high_ctime"
 
-car_map_template: "mapmaking/full_car_fejer1_5arcmin.fits"
+car_map_template: "so_geometry_v20250306_sat_f090.fits"
 
 wafer: null  # null, string, or list of strings
 save_fnames: True
-nproc: 56
 
 atomic_list: null
 abscal: False
@@ -97,38 +71,11 @@ tel: null
 
 coadd_splits_name: "full"
 coadd_split_pair:
-  - "det_left"
-  - "det_right"
+  - "scan_left"
+  - "scan_right"
 coadd_bundles_splitname:
   - "full"
-  - "det_left"
-  - "det_right"
-  - "det_upper"
-  - "det_lower"
-  - "det_in"
-  - "det_out"
   - "scan_left"
   - "scan_right"
   - "low_pwv"
   - "high_pwv"
-  - "low_dpwv"
-  - "high_dpwv"
-  - "low_sun_distance"
-  - "high_sun_distance"
-  - "low_ambient_temperature"
-  - "high_ambient_temperature"
-  - "rising_azimuth"
-  - "setting_azimuth"
-  - "-45_roll_angle"
-  - "0_roll_angle"
-  - "+45_roll_angle"
-  - "neg_f_hwp"
-  - "pos_f_hwp"
-  - "0.5_scan_speed_0.25_scan_acc"
-  - "0.5_scan_speed_0.57_scan_acc"
-  - "0.8_scan_speed_0.25_scan_acc"
-  - "0.8_scan_speed_0.9_scan_acc"
-  - "1.0_scan_speed_0.9_scan_acc"
-  - "1.5_scan_speed_1.5_scan_acc"
-  - "low_ctime"
-  - "high_ctime"
